--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".TestActivity" />
-        <activity android:name=".GiftcardActivity"></activity>
+        <activity android:name=".GiftcardActivity" />
+        <activity android:name=".components.BaseActivity" />
+        <activity android:name=".GiftcardDetailsActivity"></activity>
     </application>
 
 </manifest>
