--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.mikhaellopez:circularimageview:2.1.1'
     compile 'joda-time:joda-time:2.9.1'
+    compile 'com.android.support:design:23.1.1'
 }
