--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".MyApp"
-                android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -22,6 +22,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -34,7 +35,8 @@
         <activity android:name=".TestActivity" />
         <activity android:name=".GiftcardActivity" />
         <activity android:name=".components.BaseActivity" />
-        <activity android:name=".GiftcardDetailsActivity"/>
+        <activity android:name=".GiftcardDetailsActivity" />
+        <activity android:name=".CreateUserActivity"></activity>
     </application>
 
 </manifest>
