Broadcast events added, toolbar removed from createUserAct

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".GiftcardActivity" />
         <activity android:name=".components.BaseActivity" />
         <activity android:name=".GiftcardDetailsActivity" />
-        <activity android:name=".CreateUserActivity"/>
+        <activity
+            android:name=".CreateUserActivity"
+         />
     </application>
-
 </manifest>
