Updates related to creating user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,8 @@
         <activity android:name=".GiftcardActivity" />
         <activity android:name=".components.BaseActivity" />
         <activity android:name=".GiftcardDetailsActivity" />
-        <activity
-            android:name=".CreateUserActivity"
-         />
+        <activity android:name=".UpdateUserActivity" />
+        <activity android:name=".CreateUserActivity"></activity>
     </application>
+
 </manifest>
