--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "android.giifty.dk.giifty"
+        applicationId "dk.android.giifty"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
