--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.mikhaellopez:circularimageview:2.1.1'
+    compile 'com.squareup:otto:1.3.8'
     compile 'joda-time:joda-time:2.9.1'
 }
