--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyApp"
+        android:name=".GiiftyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -39,9 +39,14 @@
         <activity android:name=".CreateUserActivity" />
         <activity
             android:name=".PaymentActivity"
-            android:label="@string/purchase_giftcard"></activity>
-        <activity android:name=".PurchaseSuccessActivity"
-            android:label="Dit købte gavekort"></activity>
+            android:label="@string/purchase_giftcard" />
+        <activity
+            android:name=".PurchaseSuccessActivity"
+            android:label="Dit købte gavekort" />
+
+        <service
+            android:name=".services.UpdateUserService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
