--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,21 @@
 
         <service
             android:name=".services.UpdateUserService"
+            android:exported="false" />
+        <service
+            android:name=".services.CreateUserService"
+            android:exported="false" />
+        <service
+            android:name=".services.FetchUserService"
+            android:exported="false" />
+        <service
+            android:name=".services.SignInService"
+            android:exported="false" />
+        <service
+            android:name=".services.PurchaseService"
+            android:exported="false" />
+        <service
+            android:name=".services.GiftcardService"
             android:exported="false"></service>
     </application>
 
