--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,9 @@ buildscript {
         mavenCentral()
     }
 
-    dependencies {
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-    }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 23
@@ -55,17 +51,19 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/mobilepay-appswitch-1.7.0.jar')
     compile files('libs/mobilepay-appswitch-1.7.0-javadoc.jar')
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile project(':ScanditBarcodeScanner')
+    compile files('libs/OnBarcode_AndroidBarcode.jar')
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.0.0'
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.mikhaellopez:circularimageview:2.1.1'
     compile 'com.squareup:otto:1.3.8'
     compile 'joda-time:joda-time:2.9.1'
