create image done, add priceAndValue created

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "dk.android.giifty"
         minSdkVersion 21
