--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".GiiftyApplication"
@@ -46,6 +47,9 @@
             android:label="Dit købte gavekort" />
         <activity android:name=".ScannerActivity" />
         <activity android:name=".CreateBarcodeActivity" />
+        <activity android:name=".CreateImageActivity"
+            android:label="Tag salgsbillede"/>
+        <activity android:name=".PriceAndDescriptionActivity"/>
 
         <service
             android:name=".services.UserService"
@@ -62,8 +66,6 @@
         <service
             android:name=".services.BarcodeService"
             android:exported="false" />
-
-        <activity android:name=".CreateImageActivity"></activity>
     </application>
 
 </manifest>
